--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,14 +11,22 @@ dependencies:
   firebase_core: ^3.13.0
   provider: ^6.1.0
   go_router: ^14.8.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.1.5
   flutter:
     sdk: flutter
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
   build_runner: ^2.4.6
+  hive_generator: ^2.0.1
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/email_block_domain_list.conf
+    
